# maviss

./: .gitmodules  README.md
docs/: CNAME  genindex.html  index.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/Introduction/: index.html
docs/Software/: index.html
docs/_sources/: index.rst.txt
docs/source/: index.rst
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
maviss_description/: CMakeLists.txt  README.md  package.xml
maviss_description/blender_files/: board_mount_aligned_curved.stl  livox_w_gps.stl  new_base_final.stl  new_base_w_mounts.stl  siyi-a8-gimbal-plate.stl
maviss_description/blender_files/Prop-Guard-Mounts/: prop-guard-mount-T.scad  prop-guard-mount-T.stl  prop-guard-mount-TT.scad  prop-guard-mount-TT.stl  prop-guard-mount-YYT.scad  prop-guard-mount-YYT.stl  prop-guard-mount-base.scad  prop-guard-mount-base.stl  prop-guard-mount-under-1.scad  prop-guard-mount-under-1.stl  prop-guard-mount-under-2.scad  prop-guard-mount-under-2.stl  tube.scad  tube.stl
maviss_description/blender_files/Prop-Guard-Mounts/might not use/: prop-guard-mount-YT.scad  prop-guard-mount-YT.stl  prop-guard-mount-under-left.scad  prop-guard-mount-under-left.stl  prop-guard-mount-under-right.scad  prop-guard-mount-under-right.stl  prop-guard-mount-under.scad  prop-guard-mount-under.stl
maviss_description/blender_files/new_base_backup/: SUPER_LiDARboard.STL
maviss_description/electronics_diagrams/: MAVISS-Livox-Electronics.drawio
maviss_description/launch/: gazebo.launch.py  rviz.launch
maviss_description/magnetometer_node/: magnetometer_node.py
maviss_description/meshes/: livox_mid40.dae
maviss_description/urdf/: drone.urdf  drone.urdf.xacro
maviss_description/world/: default.world
maviss_web/: .buildinfo  objects.inv
maviss_web/.doctrees/: environment.pickle  index.doctree
(+56 files in other folders)
