<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maviss_description</name>
  <version>0.0.0</version>
  <description>The maviss_description package</description>
  <maintainer email="w2ha@uwaterloo.ca">Jack Ha</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>  
  <depend>std_msgs</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
 
  <build_depend>gazebo_plugins</build_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
